# eventlog

./: .gitignore  Makefile.am  autogen.sh  balabit-unix-build  configure.in
sbuild/: config.yml
smake/: builder.py
src/: Makefile.am  evt_internals.h  evtctx.c  evtlog.h  evtstr.c  evtsyslog.c  evttags.c  makefile.msc
srelease/: platforms
tgz2build/: rules
winbuild/: Makefile.am  libevtlog-dev.files  rules
